--- a/root/app/templates/__layout.hbs
+++ b/root/app/templates/__layout.hbs
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset='utf-8'/>
-    <title>Rendr Template</title>
+    <title>{%= name %}</title>
 
     <link href="/styles.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
