--- a/root/app/templates/home_index_view.hbs
+++ b/root/app/templates/home_index_view.hbs
@@ -1,2 +1,3 @@
-<h1>Wecome to Rendr!</h1>
+<h1>Wecome to {%= name %}!</h1>
+<blockquote>{%= description %}</blockquote>
 <p>You now have a base Rendr app. To get started, check out the <a href="https://github.com/airbnb/rendr">documenation on GitHub</a>.</p>
